[Gradle Build Model] Move AndroidModel to use GradlePropertyModel.
We also make ResolvedPropertyModel for lists and maps return
other ResolvedPropertyModel models instead of GradlePropertyModels.

Bug: 73184484
Test: Updated existing unit tests
Change-Id: I62c3431bf59e8315e41df0246bb1904883634524